--- a/src/app/kiosk/kiosk.component.html
+++ b/src/app/kiosk/kiosk.component.html
@@ -1,2 +1,4 @@
-<strong>Here is more stuff ^_^</strong><br />
-<em>{{title}}</em>
+<div>
+    <strong>Here is more stuff ^_^</strong><br />
+    <em>{{title}}</em>
+</div>
