Added styles to columns and changed the background image to the default wolf

--- a/src/app/kiosk/kiosk.component.html
+++ b/src/app/kiosk/kiosk.component.html
@@ -1,4 +1,20 @@
-<div>
-    <strong>Here is more stuff ^_^</strong><br />
-    <em>{{title}}</em>
+<!--<div>-->
+    <!--<strong>Here is more stuff ^_^</strong><br />-->
+    <!--<em>{{title}}</em>-->
+<!--</div>-->
+<div id="kiosk-page">
+    <div class="center-items" style="width: 100%">
+        <div class="column">
+            <h3>Top Guys</h3>
+        </div>
+        <div class="column">
+            <h3>Top Gals</h3>
+        </div>
+        <div class="column">
+            <h3>Input Scores</h3>
+        </div>
+        <div class="column">
+            <h3>IDK?</h3>
+        </div>
+    </div>
 </div>
