--- a/src/app/kiosk/kiosk.component.css
+++ b/src/app/kiosk/kiosk.component.css
@@ -1,14 +1,41 @@
 .column {
-    width: 18%;
-    min-height: 800px;
+    width: 340px;
     display: inline-block;
-    opacity: 0.75;
     margin: 0 30px 0 30px;
-    background-color: #505050;
+    background-color: rgba(80, 80, 80, 0.75);
+    vertical-align: top;
+}
+
+.column:after{
+    clear: both;
 }
 
 .column:hover {
-    opacity: 1;
+    background-color: rgba(80, 80, 80, 0.95);
+}
+
+@media screen and (max-device-height: 1080px) {
+    .column {
+        height: 900px;
+    }
+}
+
+@media screen and (max-device-height: 1080px) and (display-mode: fullscreen) {
+    .column {
+        height: 1000px;
+    }
+}
+
+@media screen and (max-device-height: 800px){
+    .column {
+        height: 660px;
+    }
+}
+
+@media screen and (max-device-height: 800px) and (display-mode: fullscreen) {
+    .column {
+        height: 715px;
+    }
 }
 
 #kiosk-page {
@@ -16,3 +43,89 @@
     background: dimgrey url("/assets/images/wolfie.png") no-repeat center;
     color: white;
 }
+
+.cf-select {
+    background: #f2f2f2;
+    border-color: white #f7f7f7 whitesmoke;
+    border-radius: 3px;
+    background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06));
+    background-image: -moz-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06));
+    background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06));
+    background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.06));
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+    padding: 6px 8px 6px 10px;
+    line-height: 14px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #62717a;
+    text-shadow: 0 1px white;
+    width: 120px;
+}
+
+hr.red-divider {
+    border: 2px solid rgb(122, 31, 58);
+    border-radius: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.list {
+    width: 340px;
+    padding: 0;
+    margin: 0;
+}
+
+.list .list-item {
+    display: block;
+    text-align: left;
+    padding-left: 8px;
+    background-color: rgba(122, 31, 58, 0.4);
+    margin: 2px;
+    vertical-align: middle;
+    border-radius: 4px;
+    white-space: nowrap;
+}
+
+.list .list-item:hover {
+    background-color: rgba(122, 31, 58, 1);
+}
+
+.list .list-item > * {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.list .list-item .list-avatar {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    align-items: center;
+    vertical-align: middle;
+    margin: 0;
+}
+
+.icon-rounded-avatar {
+    border-radius: 50%;
+    background-color: white;
+    padding: 2px;
+    border: 5px solid #007493;
+    height: 75px;
+    width: 75px;
+    vertical-align: middle;
+}
+
+.list .list-item .list-description {
+    width: 224px;
+    vertical-align: middle;
+    line-height: 25px;
+    margin: 0;
+}
+
+.list .list-item .list-row {
+    display: block;
+    margin: 0;
+    line-height: 25px;
+    vertical-align: middle;
+}
+
