Went ahead and made that news & announcements column

--- a/src/app/kiosk/kiosk.component.html
+++ b/src/app/kiosk/kiosk.component.html
@@ -80,7 +80,7 @@
             </md-input-container>
         </div>
         <div class="column">
-            <h3>IDK?</h3>
+            <h3>News & Announcements</h3>
             <p>Hmmmmm</p>
         </div>
     </div>
