Adjusted CSS to be more dynamic

--- a/src/app/kiosk/kiosk.component.html
+++ b/src/app/kiosk/kiosk.component.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="list-description">
                         <h2 class="list-row">{{athlete.name.first}} {{athlete.name.last}}</h2>
-                        <p class="list-row">Athlete Info</p>
+                        <p class="list-row">Score Info</p>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="list-description">
                         <h2 class="list-row">{{athlete.name.first}} {{athlete.name.last}}</h2>
-                        <p class="list-row">Athlete Info</p>
+                        <p class="list-row">Score Info</p>
                     </div>
                 </div>
             </div>
@@ -74,14 +74,32 @@
             <h3>Input Scores</h3>
             <br />
             <hr class="red-divider" />
-            <input type="text" /><br />
+<!--            <input type="text" /><br />
             <md-input-container>
                 <input md-input placeholder="Rawr" />
-            </md-input-container>
+            </md-input-container>-->
+            <ul class="text-left-align">
+                <li>
+                    Inputs for adding scores:
+                    <ul>
+                        <li>Athlete profile</li>
+                        <li>Section (strength/wod)</li>
+                        <li>Numeric inputs</li>
+                        <li>Comment section?</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div class="column">
             <h3>News & Announcements</h3>
-            <p>Hmmmmm</p>
+            <br />
+            <hr class="red-divider" />
+            <ul class="text-left-align">
+                <li>Could be Facebook feed</li>
+                <li>Maybe Wordpress blog feed?</li>
+                <li>Possible custom content</li>
+                <li>All of the above? <em>*gasp*</em></li>
+            </ul>
         </div>
     </div>
 </div>
