--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<md-toolbar class="center-items md-primary">
+<md-toolbar class="application-toolbar center-items md-primary">
     <h1>CrossFit Fringe</h1>
 </md-toolbar>
 <!--<md-sidenav-container>-->
