--- a/src/app/kiosk/kiosk.component.css
+++ b/src/app/kiosk/kiosk.component.css
@@ -1,5 +1,6 @@
 .column {
-    width: 340px;
+    width: 20%;
+    height: 90vh;
     display: inline-block;
     margin: 0 30px 0 30px;
     background-color: rgba(80, 80, 80, 0.75);
@@ -14,7 +15,7 @@
     background-color: rgba(80, 80, 80, 0.95);
 }
 
-@media screen and (max-device-height: 1080px) {
+/*@media screen and (max-device-height: 1080px) {
     .column {
         height: 900px;
     }
@@ -36,7 +37,7 @@
     .column {
         height: 715px;
     }
-}
+}*/
 
 #kiosk-page {
     background-size: contain;
@@ -71,7 +72,7 @@ hr.red-divider {
 }
 
 .list {
-    width: 340px;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
@@ -97,8 +98,8 @@ hr.red-divider {
 }
 
 .list .list-item .list-avatar {
-    width: 100px;
-    height: 100px;
+    width: 30%;
+    height: 100%;
     line-height: 100px;
     align-items: center;
     vertical-align: middle;
@@ -116,7 +117,7 @@ hr.red-divider {
 }
 
 .list .list-item .list-description {
-    width: 224px;
+    width: 70%;
     vertical-align: middle;
     line-height: 25px;
     margin: 0;
