--- a/src/app/kiosk/kiosk.component.html
+++ b/src/app/kiosk/kiosk.component.html
@@ -74,10 +74,9 @@
             <h3>Input Scores</h3>
             <br />
             <hr class="red-divider" />
-<!--            <input type="text" /><br />
             <md-input-container>
-                <input md-input placeholder="Rawr" />
-            </md-input-container>-->
+                <input mdInput placeholder="Rawr" value="Sushi" class="mat-primary"/>
+            </md-input-container>
             <ul class="text-left-align">
                 <li>
                     Inputs for adding scores:
