--- a/src/assets/styles/fringe.scss
+++ b/src/assets/styles/fringe.scss
@@ -1,21 +1,21 @@
-@import '~@angular/material/core/theming/all-theme';
+@import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
 // Include the base styles for Angular Material core. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
-@include md-core();
+@include mat-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$fringe-app-primary: md-palette($md-grey, 900, 800, 1000);
-$fringe-app-accent:  md-palette($md-cyan, 900, 800, 1000);
+$fringe-app-primary: mat-palette($mat-grey, 900, 800, 1000);
+$fringe-app-accent:  mat-palette($mat-cyan, 900, 800, 1000);
 
 // The warn palette is optional (defaults to red).
-$fringe-app-warn:    md-palette($md-pink, 900, 800, 1000);
+$fringe-app-warn:    mat-palette($mat-pink, 900, 800, 1000);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$fringe-app-theme: md-light-theme($fringe-app-primary, $fringe-app-accent, $fringe-app-warn);
+$fringe-app-theme: mat-light-theme($fringe-app-primary, $fringe-app-accent, $fringe-app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
