--- a/src/assets/styles/fringe.scss
+++ b/src/assets/styles/fringe.scss
@@ -1,34 +1,2 @@
-// @import '~@angular/material/theming';
-// // Plus imports for other components in your app.
-
-// // Include the base styles for Angular Material core. We include this here so that you only
-// // have to load a single css file for Angular Material in your app.
-// @include mat-core();
-
-// // Define the palettes for your theme using the Material Design palettes available in palette.scss
-// // (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// // hue.
-// $fringe-app-primary: mat-palette($mat-grey, 900, 800, 1000);
-// $fringe-app-accent:  mat-palette($mat-cyan, 900, 800, 1000);
-
-// // The warn palette is optional (defaults to red).
-// $fringe-app-warn:    mat-palette($mat-pink, 900, 800, 1000);
-
-// // Create the theme object (a Sass map containing all of the palettes).
-// $fringe-app-theme: mat-light-theme($fringe-app-primary, $fringe-app-accent, $fringe-app-warn);
-
-// // Include theme styles for core and each component used in your app.
-// // Alternatively, you can import and @include the theme mixins for each component
-// // that you are using.
-// @include angular-material-theme($fringe-app-theme);
-@import "~bulma/sass/utilities/initial-variables";
-
-$grey: #212121;
-$cyan: #00ffff;
-$warning: #ff3d3d;
-
-$primary: $grey;
-$primary-invert: $cyan;
-$danger: $warning;
-
+@import "./fringe-variables.scss";
 @import "~bulma/bulma";
