Added login component, logout, navbar component, and changed styles

--- a/src/assets/styles/fringe.scss
+++ b/src/assets/styles/fringe.scss
@@ -1,2 +1,7 @@
 @import "./fringe-variables.scss";
 @import "~bulma/bulma";
+@import "~font-awesome/scss/font-awesome";
+
+*[hidden] {
+    display: none !important;
+}
