Changed default style type to scss, removed angular material, and moved nav bar styles to the nav bar component

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -37,7 +37,7 @@
           <span class="nav-item">
             <a class="button is-primary is-inverted" 
               (click)="logout()" 
-              [class.isLoggingOut]="isLoggingOut">
+              [class.is-loading]="isLoggingOut">
               <span class="icon">
                 <i class="fa fa-sign-out"></i>
               </span>
