Moved components and services to their own directories to make a better file structure. Also added authentication service, which has not been implemented yet.

--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/fringe-variables';
+@import '../../../assets/styles/fringe-variables';
 .nav-icon {
     position: absolute;
     left: 5px;
