Added a home page and route guard for members only. Also changed the pages to be 100vh and background to be the same throughout the app

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -35,6 +35,30 @@
             </a>
           </span>
           <span class="nav-item" [hidden]="!user">
+            <a routerLink="/kiosk" class="button is-primary is-inverted">
+              <span class="icon">
+                <i class="fa fa-th"></i>
+              </span>
+              <span>Kiosk</span>
+            </a>
+          </span>
+          <span class="nav-item" [hidden]="!user">
+            <a routerLink="/wod-admin" class="button is-primary is-inverted">
+              <span class="icon">
+                <i class="fa fa-lock"></i>
+              </span>
+              <span>Admin</span>
+            </a>
+          </span>
+          <span class="nav-item" [hidden]="!user">
+            <a routerLink="/wod-admin" class="button is-primary is-inverted">
+              <span class="icon">
+                <i class="fa fa-user"></i>
+              </span>
+              <span>{{user && user.firstName}}</span>
+            </a>
+          </span>
+          <span class="nav-item" [hidden]="!user">
             <a class="button is-primary is-inverted" 
               (click)="logout()" 
               [class.is-loading]="isLoggingOut">
