--- a/src/assets/styles/fringe.scss
+++ b/src/assets/styles/fringe.scss
@@ -5,3 +5,10 @@
 *[hidden] {
     display: none !important;
 }
+
+body {
+    background-size: contain;
+    background: dimgrey url("/assets/images/wolfie.png") no-repeat center;
+    color: white;
+    height: 100vh;
+}
