--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-nav-bar (showLoginModal)="showLoginModal = $event"></app-nav-bar>
+<app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
