Added user settings component and router now takes you to home if you logout

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -51,7 +51,7 @@
             </a>
           </span>
           <span class="nav-item" [hidden]="!user">
-            <a routerLink="/wod-admin" class="button is-primary is-inverted">
+            <a routerLink="/user-settings" class="button is-primary is-inverted">
               <span class="icon">
                 <i class="fa fa-user"></i>
               </span>
