Added footer and changed home page content slightly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
+<footer class="footer">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        <strong>MyAppName</strong> by <strong>Michael Crawford</strong>.
+      </p>
+      <p>
+        <a class="icon" href="https://github.com/cerealean">
+          <i class="fa fa-github"></i>
+        </a>
+      </p>
+    </div>
+  </div>
+</footer>
