--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<section class="hero is-primary is-bold" [hidden]="!showNavigation" #navigation>
+<section class="hero" [hidden]="!showNavigation" #navigation>
   <div class="hero-head">
     <header class="nav">
       <div class="container">
