--- a/src/assets/styles/fringe-variables.scss
+++ b/src/assets/styles/fringe-variables.scss
@@ -1,11 +1,11 @@
 @import "~bulma/sass/utilities/initial-variables";
 
-$grey: #212121;
-$cyan: #00ffff;
-$warning: #ff3d3d;
+// $grey: #212121;
+// $cyan: #00ffff;
+// $warning: #ff3d3d;
 
-$primary: $grey;
-$primary-invert: $cyan;
-$danger: $warning;
+// $primary: $grey;
+// $primary-invert: $cyan;
+// $danger: $warning;
 
 $fa-font-path: '~font-awesome/fonts' !default;
