reworked some of the basic home page layout, moved the footer to its own component, and moved the app name to an environment variable

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
-<section class="section">
-  <div class="container">
-    <h1 class="title">Section</h1>
+<section class="hero is-medium has-text-centered">
+  <div class="hero-body">
+    <h1 class="title">{{applicationName}}</h1>
     <h2 class="subtitle">
-      A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading
+      Rawr!
     </h2>
   </div>
 </section>
