--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -5,7 +5,7 @@
         <strong>{{applicationName}}</strong> by <strong>Michael Crawford</strong>.
       </p>
       <p>
-        <a class="icon" href="https://github.com/cerealean">
+        <a class="icon" href="https://github.com/cerealean" target="_blank">
           <i class="fa fa-github"></i>
         </a>
       </p>
