--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="nav-center">
           <a class="nav-item">
-            CrossFit Fringe
+            {{applicationName}}
           </a>
         </div>
         <span class="nav-toggle">
