Fixed scrolling user settings menu. Also fixed home nav button.

--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -2,7 +2,7 @@
   <div class="columns is-gapless">
     <div class="column is-3">
       <div class="section">
-        <aside class="menu">
+        <aside class="menu" [class.is-menu-fixed]="isMenuFixed">
           <p class="menu-label">
             Personal Info
           </p>
