--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
         </span>
         <div class="nav-right nav-menu">
           <span class="nav-item">
-            <a class="button is-primary is-inverted">
+            <a routerLink="/home" class="button is-primary is-inverted">
               <span class="icon">
                 <i class="fa fa-home"></i>
               </span>
