--- a/src/assets/styles/fringe.scss
+++ b/src/assets/styles/fringe.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-size: contain;
-    background: dimgrey url("/assets/images/wolfie.png") no-repeat center;
+    // background-size: contain;
+    // background: dimgrey url("/assets/images/wolfie.png") no-repeat center;
     height: 100vh;
 }
