Added gym-admin component, added gym service, and changed nav bar to reference gym-admin on "Admin" menu button

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -43,7 +43,7 @@
             </a>
           </span>
           <span class="nav-item" [hidden]="!user">
-            <a routerLink="/wod-admin" class="button is-primary is-inverted">
+            <a routerLink="/gym-admin" class="button is-primary is-inverted">
               <span class="icon">
                 <i class="fa fa-lock"></i>
               </span>
