Added font-awesome attribution in footer, changed gym name icon to a fort, and fixed service provider in the component.

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -9,6 +9,13 @@
           <i class="fa fa-github"></i>
         </a>
       </p>
+      <p>
+        <span>
+          <a class="icon" href="http://fontawesome.io" target="_blank">
+            <i class="fa fa-font-awesome"></i>
+          </a>
+           Font Awesome by Dave Gandy - <a href="http://fontawesome.io" target="_blank">http://fontawesome.io</a>
+        </span>
     </div>
   </div>
 </footer>
