--- a/src/app/components/gym-admin/gym-admin.component.html
+++ b/src/app/components/gym-admin/gym-admin.component.html
@@ -7,7 +7,7 @@
             Gym Info
           </p>
           <ul class="menu-list">
-            <li><a (click)="doFocus(firstName.name)">Name</a></li>
+            <li><a (click)="doFocus(gymName.name)">Name</a></li>
           </ul>
         </aside>
       </div>
@@ -29,7 +29,7 @@
                   [class.is-danger]="gymName.errors"
                   name="gymName" />
                 <span class="icon is-small is-left">
-                  <i class="fa fa-user"></i>
+                  <i class="fa fa-fort-awesome"></i>
                 </span>
               </p>
             </div>
