Added an address card to the gym component

--- a/src/app/components/gym-admin/gym-admin.component.html
+++ b/src/app/components/gym-admin/gym-admin.component.html
@@ -17,6 +17,7 @@
       <section class="section">
         <div class="container">
           <div class="content">
+
             <div class="field">
               <label class="label">Gym Name</label>
               <p class="control has-icons-left">
@@ -33,6 +34,32 @@
                 </span>
               </p>
             </div>
+            
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  CrossFit Fringe - East
+                </p>
+                <a class="card-header-icon">
+                  <span class="icon">
+                    <i class="fa fa-angle-down"></i>
+                  </span>
+                </a>
+              </header>
+              <div class="card-content">
+                <div class="content">
+                  <address>
+                    1 Old Hwy 63<br />
+                    Columbia, MO 65201
+                  </address>
+                </div>
+              </div>
+              <footer class="card-footer">
+                <a class="card-footer-item">Edit</a>
+                <a class="card-footer-item is-danger">Delete</a>
+              </footer>
+            </div>
+
           </div>
         </div>
       </section>
